<resources>
    <string name="app_name">Meetly</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="log_in">Log In</string>
    <string name="don_t_have_a_account_register">Don\'t have an account? Register</string>
    <string name="rest_password">Reset Password</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="logout">Logout!</string>
    <string name="yes">EXIT</string>
    <string name="cancel">Cancel</string>
    <string name="confirm_logout">Are you sure?</string>
    <string name="already_have_a_account_login">Already have an account? Login</string>
    <string name="for_forgot_pass">* Please enter your registered email</string>
    <string name="display_calender">Display Calender</string>
    <string name="please_wait">Please Wait…</string>
    <string name="just_now">Just now</string>
    <string name="user_avatar">User-Avatar</string>
    <string name="phone">Phone</string>
    <string name="update_profile">Update</string>
    <string name="title">Title</string>
    <string name="meeting_link">Meeting Link</string>
    <string name="select_date">Select Date</string>
    <string name="select_time">Select Time</string>
    <string name="content">Description</string>
    <string name="https_meet_com_demo">https://meet.com/demo</string>
    <string name="_25_02_2000">25–02–2000</string>
    <string name="_01_25_am">01–25 AM</string>
    <string name="delete_meeting_icon">delete meeting icon</string>
    <string name="user_meeting_list_image">User Meeting List Image</string>
    <string name="meetly_meetly_vigneshcodes_in">meetly@meetly.vigneshcodes.in</string>
    <string name="android_developer">Android Developer</string>
    <string name="devsection">DevSection</string>
    <string name="sriganesh">Sriganesh Rao</string>
    <string name="vignesh_shetty">Vignesh Shetty</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="dumy_text_area">Dumy Text</string>
    <string name="meeting_attendees">Meeting Attendees</string>
    <string name="share">Share</string>
    <string name="launch_meeting">Launch Meeting</string>
    <string name="room_name">Room Name</string>
    <string name="dropbox_app_key">gmh5c05ywt6q1te</string>
    <string name="note_user_must_have_account_at_meetly">Note : User must have account at Meetly!</string>
    <string name="version_1_0_0">Version 1.5</string>
    <string name="email_verified">Email Verified</string>
    <string name="verify_email">Verify Email Address!</string>
    <string name="action_profile">Profile</string>
    <string name="verified_email">Verified Email!</string>
    <string name="exitMessage">Are you sure want to exit ?</string>
    <string name="attendee">Attendees : </string>
    <string name="_1">1</string>
    <string name="host">Host</string>
    <string name="description">Description</string>
    <string name="join_meeting">Join Meeting!</string>
    <string name="add_more">+ Add More</string>
    <string name="help_amp_support"><![CDATA[HELP & SUPPORT]]></string>
    <string name="support_updates">Support Updates</string>
    <string name="raise_request">Raise Request</string>
    <string name="team">Team</string>
    <string name="create">Create</string>
    <string name="today_s">Today\'s</string>
    <string name="meeting_s">MEETING\'S</string>
    <string name="profile">Profile</string>
    <string name="subscriber">SUBSCRIBER</string>
    <string name="save">SAVE</string>
    <string name="date_amp_time"><![CDATA[Date & Time]]></string>
    <string name="submit">Submit</string>
    <string name="library">Libraries Used</string>
    <string name="retrofit">Retrofit</string>
    <string name="jitsi_meet">Jitsi meet</string>
    <string name="jitsi_info">Jitsi Meet is an open source JavaScript WebRTC application used primarily for video conferencing. In addition to audio and video, screen sharing is available, and new members can be invited via a generated link. The interface is accessible via web browser or with a mobile app.</string>
    <string name="retrofit_info">Retrofit developed by square and in documentation, it is type-safe REST client for Android and Java. Retrofit turns your HTTP API into a Java interface. Retrofit android is very simple to use. It essentially lets us treat API calls as simple Java method calls, so we only define which URLs to hit and the types of the request/response parameters as Java classes. The entire network call + JSON/XML parsing is completely handled by Retrofit (e.g. Gson for JSON parsing). It allows to make a synchronous or asynchronous HTTP request to the remote webserver.</string>
    <string name="github">Github</string>
    <string name="glide">Glide</string>
    <string name="glide_info">Glide is a fast and efficient image loading library for Android focused on smooth scrolling. Glide offers an easy to use API, a performant and extensible resource decoding pipeline and automatic resource pooling. Glide supports fetching, decoding, and displaying video stills, images, and animated GIFs. Glide includes a flexible api that allows developers to plug in to almost any network stack. By default Glide uses a custom HttpUrlConnection based stack, but also includes utility libraries plug in to Google’s Volley project or Square’s OkHttp library instead.</string>
    <string name="lottie">Lottie</string>
    <string name="lottie_info">Lottie is a mobile library for Android and iOS that parses Adobe After Effects animations exported as json with Bodymovin and renders them natively on mobile! For the first time, designers can create and ship beautiful animations without an engineer painstakingly recreating it by hand. They say a picture is worth 1,000 words so here are 13,000:</string>
    <string name="alertDialogDeniedPermissionText"><font color='#000000'>We need access to Reading External Storage for performing necessary task. Please permit the permission through
	Settings screen.\n\nGo to App permissions -> Storage -> Allow</font></string>
    <string name="alertDialogPermissionText"><font color='#000000'>Meetly needs read permission in order to properly work. Please grant this permission to proceed</font></string>
    <string name="permit">Permit Manually</string>
    <string name="exit">Exit the app</string>
    <string name="calender">Calender</string>
</resources>