<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_margin="5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <ImageView
        android:id="@+id/users_list_meeting_image"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:src="@drawable/light_logo"
        android:contentDescription="@string/user_meeting_list_image" />

    <TextView
        android:id="@+id/users_list_meeting_name"
        android:layout_marginStart="5dp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/users_list_meeting_image"
        android:text="@string/app_name"
        android:textSize="20sp"
        android:fontFamily="@font/catamaran"/>

    <TextView
        android:id="@+id/users_list_meeting_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/users_list_meeting_name"
        android:text="@string/meetly_meetly_vigneshcodes_in"
        app:layout_constraintStart_toEndOf="@id/users_list_meeting_image"
        android:textSize="18sp"
        android:layout_marginStart="5dp"
        android:fontFamily="@font/catamaran"/>
</androidx.constraintlayout.widget.ConstraintLayout>